<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">Restaurante Lobito de Mar</string>
    <string name="str_registro">Nuevo en el restaurante? Registrese aquí</string>
    <string name="str_correo">Correo</string>
    <string name="str_password">Contraseña</string>
    <string name="str_login">Login</string>
    <string name="str_name">Nombre Completo</string>
    <string name="str_cap_email">Correo</string>
    <string name="str_cap_password">Contraseña</string>
    <string name="str_newRegister">Registra nueva cuenta</string>
    <string name="str_alredy_account">Ya tiene cuenta! Logeese aquí</string>
    <string name="str_cap_imagen">Imagen</string>
    <string name="without_access_security">Usted no tiene permiso para acceder a la localización del archivo</string>
    <string name="ok_insert">Agregado exitosamente</string>
    <string name="without_name">No se ha agregado el nombre</string>
    <string name="without_email">No se agregó el correo</string>
    <string name="without_password">No se agregó la conatraseña</string>
    <string name="validate_empty">Existen campos estan vacíos</string>
    <string name="ok_user_authenticate">Usuario validado con éxito</string>
    <string name="nok_user_authenticate">El usuario no existe en el sistema</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">Acerca de</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Other</string>
    <string name="dishes">Platos</string>
    <string name="drinks">Bebidas</string>
    <string name="profile">Perfil</string>
    <string name="settings">Configuraciones</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="hello_blank_dishes">Hola Plato</string>
    <string name="hello_blank_drinks">Hola Bebidas</string>
    <string name="hello_blank_profile">Hola Perfil</string>
    <string name="hello_blank_settings">Hola Configuración</string>
    <string name="str_about_image">Lobito de Mar</string>
    <string name="str_description_restaurant">El mejor restaurante de comida de mar, comparta con el cotizado chef Antoine y observe como su comida se prepara</string>
    <string name="str_restaurant">Restaurante Lobito de Mar</string>
    <string name="str_curso">Materia</string>
    <string name="str_description_course">Computación Móvil - 2554767-1</string>
    <string name="str_about">Curso de Computación Móvil</string>
    <string name="str_imagen_usuario">Imagen Usuario</string>
    <string name="usuario">Usuario:</string>
    <string name="email">Correo:</string>
    <string name="your_name">Sú nombre</string>
    <string name="enter_name">Entre su nombre completo</string>
    <string name="name">Nombre</string>
    <string name="resumen">Carlos Augusto</string>
    <string name="your_email">Sú correo</string>
    <string name="enter_your_email">Digite su dirección de correo</string>
    <string name="email_str">Correo</string>
    <string name="your_password">Contraseña</string>
    <string name="enter_your_password">digite su contraseña</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="notifications">Notificaciones</string>
    <string name="str_enable_notification">Activar notificaciones</string>
    <string name="str_active_notactive">Active o desactive notificaciones</string>
    <string name="str_enable_sound">Activar sonido</string>
    <string name="str_active_notactive_sound">Active o desactive el sonido</string>
    <string name="toolbar_title">Platos</string>
    <string name="action_search">Buscar</string>
    <string name="search_hint">Escriba el nombre…</string>
    <string name="email_exist">El correo ya esta registrado</string>
    <string name="ok_update">Se actualizó con éxito</string>
    <string name="drink_name">Nombre de la bebida</string>
    <string name="unit">Precio (pesos)</string>
    <string name="login">Ingrese a su cuenta</string>
</resources>
